--- a/dashboard.html
+++ b/dashboard.html
@@ -8,6 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="shortcut icon" href="download.png" type="image/x-icon">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 </head>
 </head>
 
@@ -17,13 +19,29 @@
         <p class="fs-3 fw-bold fst-italic">Here is your information :</p>
         <div class="info fs-4 fw-bold px-5 text-break" id="show"></div>
         <div class="text-end pe-5">
-            <button class="btn btn-dark mt-3 rounded-3 border border-light border-3 fw-bold" onclick="logOut()">Log
-                Out</button>
+            <button class="btn btn-dark mt-3 rounded-3 border border-light border-3 fw-bold" onclick="logOut()">LogOut</button>
         </div>
     </div>
 
 
     <script>
+    function toast(message = 'Welcome', colour = 'red', duration = 3000) {
+    Toastify({
+        text: message,
+        duration: duration,
+        destination: "https://github.com/apvarun/toastify-js",
+        newWindow: true,
+        close: true,
+        gravity: "top",
+        position: "center",
+        stopOnFocus: true,
+        style: {
+            background: colour
+        },
+        onClick: function () { }
+    }).showToast();
+}
+
         let loggedUser = JSON.parse(localStorage.getItem('signin'))
         loggedUser?console.log(loggedUser):window.location.href = 'signin.html'
         show.innerHTML += `
@@ -34,6 +52,7 @@
         function logOut() {
             localStorage.removeItem('signin');
             alert('Logged out successfully!');
+            // toast('Logged out successfully!','red',2000)
             window.location.href = "signin.html"
         }
     </script>
