--- a/signin.html
+++ b/signin.html
@@ -6,6 +6,8 @@
     <title>Sign in</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="shortcut icon" href="download.png" type="image/x-icon">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 </head>
 <body style="background-color: #02D1AC;">
     <div class="box mx-auto col-lg-5 col-8 mt-5 p-2 border border-4 rounded-5 shadow">
@@ -28,14 +30,33 @@
 
 
     <script>
+    function toast(message = 'Welcome', colour = 'red', duration = 3000) {
+    Toastify({
+        text: message,
+        duration: duration,
+        destination: "https://github.com/apvarun/toastify-js",
+        newWindow: true,
+        close: true,
+        gravity: "top",
+        position: "center",
+        stopOnFocus: true,
+        style: {
+            background: colour
+        },
+        onClick: function () { }
+    }).showToast();
+}
+
         const mail = document.getElementById('email')
         const pin = document.getElementById('password')
         function logInBtn(){
             if(mail.value == '' && pin.value == ''){
-                alert('Kindly fill in the spaces')
+                // alert('Kindly fill in the spaces')
+            toast('Kindly fill in the input!','red',1500)
             }
             else if (mail.value == '' || pin.value == ''){
-                alert('fill it up')
+                // alert('fill it up')
+            toast('Kindly fill in the input!','red',1500)
             }
             else{
                 let gottenInfo = JSON.parse(localStorage.getItem('information'))
@@ -51,7 +72,8 @@
                     
                 }
                 else{
-                    alert('invalid information')
+                    // alert('invalid information')
+            toast('Invalid information!','red',1500)
                 }
             }
         }
